# mausritter-sheet

./: .dockerignore  .env  .eslintignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json  release-tauri-app.yml  vue.config.js
.github/workflows/: codeql-analysis.yml  publish.yml  release-tauri-app.yml
design/: mausritter-sheet-cover.xcf
public/: index.html  manifest.json
src/: App.vue  TODO.md  config.js  main.js  wave-ui.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: About.vue  Bank.vue  Checker.vue  Chips.vue  Conditions.vue  ConfirmDialog.vue  CustomInput.vue  D10.vue  D12.vue  D20.vue  D4.vue  D6.vue  D8.vue  Dice.vue  DiceResult.vue  Drawer.vue  Hireling.vue  Hirelings.vue  HirelingsInventory.vue  History.vue  Items.vue  NumberInput.vue  Preferences.vue  PromptDialog.vue  Rules.vue  Sheet.vue  SheetToolbar.vue  Welcome.vue  WelcomeApp.vue
src/locales/: conditions.de-DE.json  conditions.en-US.json  conditions.en_US.json  conditions.es-ES.json  conditions.fr-FR.json  conditions.fr_FR.json  conditions.ru-RU.json  de-DE.json  en-US.json  en_US.json  es-ES.json  fr-FR.json  fr_FR.json  hirelings.de-DE.json  hirelings.en-US.json  hirelings.en_US.json  hirelings.es-ES.json  hirelings.fr-FR.json  hirelings.ru-RU.json  items.de-DE.json  items.en_US.json  items.es-ES.json  items.fr_FR.json  items.ru-RU.json  languages.json  mouse-names.de-DE.js  mouse-names.en_US.js  mouse-names.es-ES.js  mouse-names.fr_FR.js  mouse-names.ru-RU.json  mouse.de-DE.json  (+11 more)
(+40 files in other folders)
