[package]
name = "mausritter_sheet"
version = "1.11.0"
description = "Mausritter Character Sheet"
authors = [ "Daniel Coquette" ]
license = "Mausritter Third Party Licence"
repository = "https://github.com/yar0d/mausritter-sheet"
default-run = "mausritter_sheet"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }

[dependencies.tauri]
version = "1.0.0-beta.8"
features = ["api-all"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
